Add basic game UI

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
+
+    <div class="buttonContainer">
+        <button class = "rockButton">ROCK</button>
+        <button class = "paperButton">PAPER</button>
+        <button class = "scissorsButton">SCISSORS</button>
+    </div>
+
+    <div class="infoContainer">
+        <div class="computerChoice"></div>
+        <div class="roundResult"></div>
+        <div>
+            <div>You: </div>
+            <div class="playerScore">0</div>
+        </div>
+        <div>
+            <div>Computer: </div>
+            <div class="computerScore">0</div>
+        </div>
+
+    </div>
 
     <script src="game_script.js"> </script>
 </body>
