Add end game message

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="buttonContainer">
-        <button class = "rockButton">ROCK</button>
-        <button class = "paperButton">PAPER</button>
-        <button class = "scissorsButton">SCISSORS</button>
+        <button class = "rock">ROCK</button>
+        <button class = "paper">PAPER</button>
+        <button class = "scissors">SCISSORS</button>
     </div>
 
     <div class="infoContainer">
@@ -26,6 +26,7 @@
             <div>Computer: </div>
             <div class="computerScore">0</div>
         </div>
+        <div class="gameEnd"></div>
 
     </div>
 
