Add start button and conditions

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <div class="infoContainer">
         <div class="computerChoice"></div>
         <div class="roundResult"></div>
-        <div>
+        <div class="pScoreContainer">
             <div>You: </div>
             <div class="playerScore">0</div>
         </div>
-        <div>
+        <div class="cScoreContainer">
             <div>Computer: </div>
             <div class="computerScore">0</div>
         </div>
         <div class="gameEnd"></div>
+
+        <button class="start">START</button>
 
     </div>
 
